# auto-dd

./: .env.example  .gitignore  AAPL_autodd_sample_report.html  CLAUDE.md  MU_autodd_sample_report.html  README.md  pyproject.toml
config/: research_profiles.yaml  source_priority.yaml
config/value_chain_templates/: consumer_products.yaml  energy_commodities.yaml  financial_services.yaml  healthcare.yaml  industrials.yaml  semiconductors.yaml  software_cloud.yaml
guidelines/: company_product_business_fundamentals_analysis_template_v2.md  company_product_business_fundamentals_and_value_chain_analysis_template_v3.md  value_chain_public_company_mapping_spec.md
prompts/: analyze_section.md  detect_counterevidence.md  extract_facts.md  extract_product_or_service.md  repair_output.md  select_peers.md  synthesize_report.md  validate_vc_relationship.md  vc_chokepoint_enrich.md  vc_executive_summary.md
src/company_research/: cli.py  config.py  pipeline.py  pipeline_compare.py  pipeline_flow.py  pipeline_update.py  pipeline_value_chain.py
src/company_research/analysis/: sections.py
src/company_research/extraction/: facts.py  guidance.py  topic_queries.py
src/company_research/identity/: edgar.py  resolver.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_citation_resolver.py  test_contradiction_detection.py  test_diff.py  test_external_adapters.py  test_html_export.py  test_m2_components.py  test_models.py  test_parsers.py  test_peer_selector.py  test_period_normalization.py  test_value_chain.py  test_vc_m2.py  test_vc_m3.py  test_vc_m4.py
(+55 files in other folders)
